--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "devDependencies": {
     "cross-env": "^5.2.0",
+    "gatsby-transformer-remark": "^2.5.0",
     "gh-pages": "^2.0.1",
     "prettier": "^1.17.1"
   },
