--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-grid-gallery": "^0.5.5",
     "react-helmet": "^5.2.1",
     "react-md": "^1.12.1"
   },
